Added home page hero section initial design

--- a/src/components/TopNav/TopNav.scss
+++ b/src/components/TopNav/TopNav.scss
@@ -7,13 +7,13 @@
     padding-right: 1.4rem;
     padding-top: 1rem;
     padding-bottom: 1rem;
-    box-shadow: 0px 1px 8px #999;
+
     a:not(.call-to-action-button){
         display: inline-block;
         text-decoration: none;
         color: $text-color;
         transition: all $time-hover-response;
-        &:hover{
+        &:hover, &.active{
             color: $primary-color;
         }
     }
@@ -25,9 +25,6 @@
         padding: .7rem;
         font-size: medium;
         text-align: center;
-        &.active{
-            color: $primary-color;
-        }
     }
     nav{
         display: flex;
@@ -50,10 +47,19 @@
         left:25px;
         right: 25px;
         top:20px;
+        box-shadow: 0px 1px 8px #999;
+        z-index: 99;
         animation: top-navigation-fix-on-screen .3s;
     }
     .menu-toggle{
         display: none;
+    }
+    .nav-brand{
+        padding: 0;
+        padding-right: 10px;
+        img{
+            height: 32px;
+        }
     }
 }
 
