--- a/src/index.scss
+++ b/src/index.scss
@@ -28,8 +28,10 @@ body{
     display: inline-block;
     text-decoration: none;
     border-radius: 20px;
-    padding: .5rem;
+    border-radius: 0.375rem;
     box-shadow: 1px 2px 10px #999;
+    padding: 0.75rem 1.5rem;
+    border: none;
     font-weight: bold;
     text-align: center;
     transition: all $time-hover-response;
