--- a/src/components/TopNav/TopNav.scss
+++ b/src/components/TopNav/TopNav.scss
@@ -44,10 +44,10 @@
     }
     &.fixed{
         position: fixed;
-        left:25px;
-        right: 25px;
-        top:20px;
         box-shadow: 0px 1px 8px #999;
+        top:0;
+        left: 0;
+        right: 0;
         z-index: 99;
         animation: top-navigation-fix-on-screen .3s;
     }
@@ -65,7 +65,7 @@
 
 @keyframes top-navigation-fix-on-screen {
   from {top: -50px;}
-  to {top: 25px}
+  to {top: 0px}
 }
 
 @media (max-width: 768px) {
@@ -74,9 +74,12 @@
         overflow: hidden;
         transition: height 0.5s ease-out;
         position: fixed;
+        max-width: 100vw;
+        z-index: 99;
         left: 0;
         right: 0;
         top:0;
+        padding-left: 0;
         &.open{
             height: 100vh;
             .menu-toggle{
@@ -87,6 +90,8 @@
             display: flex;
             flex-direction: column;
             gap: 1rem;
+            position: relative;
+
         }
         a:not(.call-to-action-button){
             &.active{
@@ -107,7 +112,7 @@
         .menu-toggle{
             display: inline;
             position: absolute;
-            top:10px;
+            top:-10px;
             right: 10px;
             font-size: x-large;
             background-color: transparent;
@@ -117,6 +122,7 @@
         }
         .nav-brand{
             align-self: flex-start;
+            padding-left: 15px;
         }
     }
 }
