--- a/src/components/ArticleDetailsPage/ArticleDetailsPage.scss
+++ b/src/components/ArticleDetailsPage/ArticleDetailsPage.scss
@@ -159,6 +159,7 @@ $share-buttons-size: 45px;
             color:$primary-color;
             text-decoration: none;
             border-bottom: 1px solid rgba($primary-color, 0.2);
+            transition: all $time-hover-response;
             &:hover{
                 border-bottom-color: rgba($primary-color, 0.6);
             }
