Added frequent lies details page initial design

--- a/src/components/MediasPage/MediasPage.scss
+++ b/src/components/MediasPage/MediasPage.scss
@@ -78,7 +78,7 @@
         }
         border-left: 3px solid transparent;
         &:hover{
-            background-color: rgba($background-color-dark, 0.04);
+            background-color:rgba(white, 0.5);
             h3{
                 color: $accent-color;
             }
