--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -1,7 +1,8 @@
 $primary-color: #3e4bff;
-$background-color: #EFF8FF;
+$background-color: #EFF8FF; //#f8f9ff
 $background-color-dark: #2a2b32;
 $text-color: #2a2b32;
 $text-color-light: #EFF8FF;
 $accent-color: #e04f1f;
-$danger-clor: #dc3545;
+$danger-color: #F73334;
+$success-color: #1BB754;
