--- a/src/components/ArticlesGrid/ArticlesGrid.scss
+++ b/src/components/ArticlesGrid/ArticlesGrid.scss
@@ -10,6 +10,7 @@
         min-width: 250px;
         width: 400px;
         box-shadow: 0px 3px 3px 0px rgba(0,0,0,0.3);
+        background-color:rgba(white, 0.5);
         h3{
             margin:10px 0;
             color:$primary-color;
