--- a/src/components/TopNav/TopNav.scss
+++ b/src/components/TopNav/TopNav.scss
@@ -80,6 +80,7 @@
         right: 0;
         top:0;
         padding-left: 0;
+        padding-right: 0;
         &.open{
             height: 100vh;
             .menu-toggle{
@@ -113,7 +114,7 @@
             display: inline;
             position: absolute;
             top:-10px;
-            right: 10px;
+            right: 0px;
             font-size: x-large;
             background-color: transparent;
             width: 3rem;
