--- a/src/index.scss
+++ b/src/index.scss
@@ -11,6 +11,8 @@ body{
     font-style: normal;
     padding: 0;
     margin: 0;
+    width: 100vw;
+    overflow-x: hidden;
 }
 @media (max-width: 768px) {
     body{
