--- a/src/components/SuggestionCarusel/SuggestionCarusel.scss
+++ b/src/components/SuggestionCarusel/SuggestionCarusel.scss
@@ -8,6 +8,9 @@
     height: 500px;
     max-width: 1600px;
     margin: auto;
+    @media (max-width:820px){
+        height: fit-content;
+    }
     &.current{
         display: block;
     }
@@ -17,8 +20,14 @@
     gap: 50px;
     margin-top: 100px;
     height: 500px;
+    @media (max-width:820px){
+        flex-wrap: wrap;
+        height: fit-content;
+        justify-content: center;
+        gap:10px;
+    }
     &-image{
-        min-width: 400px;
+        width: 400px;
         img{
             width: 400px;
             background: white;
@@ -27,8 +36,21 @@
             object-fit: contain;
         }
     }
+    @media (max-width:820px){
+        &-image{
+            width:73vw;
+            img{
+                width: 100%;
+                height: 75vw;
+                padding: 1vw;
+            }
+        }
+    }
     &-content{
         padding: 15px;
+        @media (max-width:820px){
+            max-width: 85vw;
+        }
     }
     a{
         color: $primary-color;
