--- a/src/styles/shared/detailsPage.scss
+++ b/src/styles/shared/detailsPage.scss
@@ -192,7 +192,7 @@
 .reference-list-container{
     min-width: 80%;
     margin: 1rem 0;
-    margin-left: 220px;
+    margin-left: 10vw;
     ul{
         list-style: none;
     }
