Updated website design palette and added medias page banner

--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -1,8 +1,8 @@
-$primary-color: #3e4bff;
+$primary-color: #3e5fff;
 $background-color: #EFF8FF; //#f8f9ff
-$background-color-dark: #2a2b32;
-$text-color: #2a2b32;
+$background-color-dark: #151823;
+$text-color: #151823;
 $text-color-light: #EFF8FF;
-$accent-color: #e04f1f;
+$accent-color: #D73000;
 $danger-color: #F73334;
 $success-color: #1BB754;
