--- a/src/components/FrequentLiesBanner/FrequentLiesBanner.scss
+++ b/src/components/FrequentLiesBanner/FrequentLiesBanner.scss
@@ -44,11 +44,12 @@
     h2{
         font-size: 2rem;
         background-color: $background-color;
-        color: $accent-color;
+        color: $primary-color;
         padding: 20px 10px;
         padding-left: 3vw;
         box-shadow: 7px 3px 5px rgba($text-color, 0.7);
     }
+
 }
 @media (max-width: 678px){
     .lies-banner{
