--- a/src/components/MediasPage/MediasPage.scss
+++ b/src/components/MediasPage/MediasPage.scss
@@ -79,12 +79,12 @@
         }
         border-left: 3px solid transparent;
         &:hover{
-            background-color:rgba(white, 0.5);
+            background-color:rgba($background-color, 0.5);
             h3{
                 color: $accent-color;
             }
             .call-to-action-text{
-                color: $accent-color;
+                color: $primary-color;
             }
         }
     }
