--- a/src/components/TopNav/TopNav.scss
+++ b/src/components/TopNav/TopNav.scss
@@ -2,7 +2,7 @@
 @use '../../styles/timings' as *;
 
 .top-navigation{
-    background-color: $background-color;
+    // background-color: $background-color;
     padding-left: 1.4rem;
     padding-right: 1.4rem;
     padding-top: 1rem;
@@ -43,6 +43,7 @@
         padding-right: 1rem;
     }
     &.fixed{
+        background-color: white;
         position: fixed;
         box-shadow: 0px 1px 8px #999;
         top:0;
@@ -81,6 +82,7 @@
         top:0;
         padding-left: 0;
         padding-right: 0;
+        background-color: white;
         &.open{
             height: 100vh;
             .menu-toggle{
@@ -107,9 +109,9 @@
         .center{
             position: relative;
         }
-        &.fixed{
-            position: relative;
-        }
+        // &.fixed{
+        //     position: relative;
+        // }
         .menu-toggle{
             display: inline;
             position: absolute;
