--- a/src/index.scss
+++ b/src/index.scss
@@ -8,7 +8,7 @@ html{
     max-width: 100vw;
 }
 body{
-    background-color: $background-color;
+    // background-color: $background-color;
     color: $text-color;
     font-family: "Montserrat", sans-serif;
     font-optical-sizing: auto;
