--- a/src/components/FrequentLiesBanner/FrequentLiesBanner.scss
+++ b/src/components/FrequentLiesBanner/FrequentLiesBanner.scss
@@ -3,10 +3,11 @@
     height: 800px;
     margin-bottom: 100px;
     padding-bottom: 20px;
+    position: relative;
+    overflow: hidden;
     .bg{
         position: absolute;
         z-index: 0;
-        // height: 800px;
     }
     .banner-background {
         display: grid;
@@ -51,7 +52,7 @@
     }
 
 }
-@media (max-width: 678px){
+@media (max-width: 1360px){
     .lies-banner{
         .banner-background{
             width: 100vw;
@@ -60,6 +61,28 @@
         .banner-titles{
             max-width: 100vw;
             text-align: left;
+        }
+        h1{
+            font-size: 3.5rem;
+            padding: 25px;
+        }
+        h2{
+            font-size: 2rem;
+            padding: 25px;
+        }
+    }
+}
+@media (max-width: 678px){
+    .lies-banner{
+        height: fit-content;
+        .banner-background{
+            width: 100vw;
+            left:0;
+        }
+        .banner-titles{
+            max-width: 100vw;
+            text-align: left;
+            padding-top: 50px;
         }
         h1{
             font-size: 2.5rem;
