--- a/src/components/OpinionsPage/OpinionsPage.scss
+++ b/src/components/OpinionsPage/OpinionsPage.scss
@@ -4,4 +4,12 @@
     h1{
     margin: 50px 20px;
     }
+    .load-more-container{
+        text-align: right;
+        padding: 30px;
+        button{
+            font-size: large;
+            cursor: pointer;
+        }
+    }
 }
