Added CMS system with TipTap and editor authentication and administration panels

--- a/src/components/AdministrationSideNav/AdministrationSideNav.scss
+++ b/src/components/AdministrationSideNav/AdministrationSideNav.scss
@@ -10,7 +10,7 @@
     }
     .logo svg{
         .logo-mic{
-            fill: $background-color;
+            fill: $accent-color;
         }
         text{
             fill:$background-color;
