--- a/src/components/EditorsList/EditorsList.scss
+++ b/src/components/EditorsList/EditorsList.scss
@@ -1,70 +1,1 @@
-@use '../../styles/colors' as *;
-.editors-table{
-    width: 85%;
-     border-collapse: collapse;
-    thead{
-        background-color: $primary-color;
-        color: white;
-        font-weight: 500;
-    }
-    td{
-        padding: 10px;
-    }
-    tr{
-        line-height: 2rem;
-        border-bottom: 1px solid white;
-    }
-    tr:nth-child(even){
-        background-color: $background-color;
-    }
-    button{
-        background-color: transparent;
-        outline: none;
-        border: none;
-        cursor: pointer;
-    }
-    .backdrop{
-        position: fixed;
-        left:0;
-        top:0;
-        width: 100vw;
-        height: 100vw;
-    }
-    .disabled-indicator, .admin-indicator{
-        color: $danger-color;
-        margin-right: 10px;
-    }
-    .admin-indicator{
-        color: #ffa800;
-    }
-    .actions-dropdown{
-        position: absolute;
-        background-color: white;
-        border:1px solid rgba($text-color, 0.5);
-        border-radius: 2px;
-        display: flex;
-        flex-wrap: wrap;
-        width: 200px;
-
-        overflow: hidden;
-        button{
-            color: $text-color;
-            font-family: inherit;
-            min-width: 100%;
-            line-height: 2.5rem;
-            font-size: 1rem;
-            border-bottom: 1px solid rgba($text-color, 0.5);
-            padding-left: 15px;
-            text-align: left;
-            &:hover{
-                background-color: rgba($background-color, 0.7);
-            }
-        }
-        p{
-            line-height: 0.8rem;
-            padding-left: 15px;
-            color: $accent-color;
-            font-size: medium;
-        }
-    }
-}
+@import url('../../styles/shared/editorPage.scss');
