--- a/src/styles/shared/detailsPage.scss
+++ b/src/styles/shared/detailsPage.scss
@@ -61,6 +61,9 @@
         font-size: medium;
         text-align: center;
         max-width: 100vw;
+        tab-size: 4;
+        -moz-tab-size: 4;
+        white-space: pre-wrap;
         @media (max-width:768px) {
             padding: 20px;
         }
@@ -103,7 +106,7 @@
             @media (max-width: 768px) {
                 margin-left: 0;
             }
-            .quote-text::before{
+            p:first-child::before{
                 content: "“";
                 font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
                 float: left;
@@ -111,7 +114,9 @@
                 margin-right: .3rem;
                 margin-top: .325rem;
                 height: 0;
-
+            }
+            p:has(>img){
+                display: flex;
             }
             .quote-author{
                 position: absolute;
@@ -129,16 +134,11 @@
                 margin-top:25px;
                 margin-right: 25px;
             }
-            &:has(>img){
-                display: flex;
-                &::before{
-                    color: red!important;
-                    position: absolute;
-                    left:200px;
-                }
-            }
             @media (max-width:768px) {
                 flex-direction: column;
+                .quote-text{
+                    flex-wrap: wrap;
+                }
             }
         }
         iframe{
